--- a/dm-backend/Cargo.toml
+++ b/dm-backend/Cargo.toml
@@ -11,5 +11,6 @@ rust_decimal = "1.36.0"
 serde = { version = "1.0.210", features = ["derive"] }
 sqlx = { version = "0.8.2", features = ["chrono", "postgres", "runtime-tokio", "rust_decimal", "tls-rustls-ring"] }
 tokio = { version = "1.40.0", features = ["rt-multi-thread", "net", "macros"] }
+tower-http = { version = "0.6.1", features = ["cors"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
