--- a/dm-front/Cargo.toml
+++ b/dm-front/Cargo.toml
@@ -13,4 +13,6 @@ dioxus = { version = "0.5", features = ["web", "router"] }
 # Debug
 dioxus-logger = "0.5.1"
 reqwest = { version = "0.12.8", features = ["json"] }
-serde_json = "1.0.128"
+chrono = { workspace = true }
+rust_decimal = { workspace = true }
+serde = { workspace = true }
